After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 652288 - [avidemux] 24-bit rgb data has wrong stride
[avidemux] 24-bit rgb data has wrong stride
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.10.28
Other Linux
: Normal normal
: 0.10.36
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-06-10 13:38 UTC by Nick Haddad
Modified: 2011-11-09 11:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
AVI File with skewed output (58.70 KB, application/x-zip-compressed)
2011-06-10 13:39 UTC, Nick Haddad
  Details
Expected Output Video Frame (26.87 KB, image/jpeg)
2011-06-10 13:40 UTC, Nick Haddad
  Details
Actual Output Video Frame (35.87 KB, image/jpeg)
2011-06-10 13:40 UTC, Nick Haddad
  Details
Gspot Output Screenshot (152.71 KB, image/png)
2011-06-13 12:59 UTC, Nick Haddad
  Details
avidemux: fix wrong stride when inverting uncompressed video (1.00 KB, patch)
2011-11-08 15:39 UTC, Vincent Penquerc'h
committed Details | Review

Description Nick Haddad 2011-06-10 13:38:23 UTC
Reproduction Steps
-------------------

1) Download the attached avi file (myDebugOutput.avi) to /tmp
2) Run the following from the command line

gst-launch-0.10 playbin uri=file:///tmp/myDebugOutput.avi

OR

gst-launch-0.10 playbin2 uri=file:///tmp/myDebugOutput.avi


Notice the images in the file are skewed (see attached outputSkewed.jpg).  The real image should look like the attached outputNormal.jpg).


This issue is also apparent in Totem and MATLAB, both of which use gstreamer.
Comment 1 Nick Haddad 2011-06-10 13:39:40 UTC
Created attachment 189627 [details]
AVI File with skewed output
Comment 2 Nick Haddad 2011-06-10 13:40:03 UTC
Created attachment 189628 [details]
Expected Output Video Frame
Comment 3 Nick Haddad 2011-06-10 13:40:20 UTC
Created attachment 189629 [details]
Actual Output Video Frame
Comment 4 David Schleef 2011-06-12 18:08:44 UTC
What did you use to create this file?  It appears to be creating incorrect AVI files.  (Which is not surprising, since AVI isn't very well documented.)
Comment 5 Nick Haddad 2011-06-13 12:58:39 UTC
I'm not sure what tool was used to create this file (it came from a customer of ours).  

I opened this in gspot (see attached gspot.png) and several other AVI tools and the header looks like a properly formed OpenDML AVI file.  Is there something specific in the headers, frame index, or frame entries that makes you think the file is invalid?

Thanks!
Comment 6 Nick Haddad 2011-06-13 12:59:04 UTC
Created attachment 189822 [details]
Gspot Output Screenshot
Comment 7 Vincent Penquerc'h 2011-11-08 15:39:25 UTC
Created attachment 201011 [details] [review]
avidemux: fix wrong stride when inverting uncompressed video

Such frames have a stride multiple of 4, see
http://lscube.org/pipermail/ffmpeg-issues/2010-April/010247.html.

This showed up on a sample using a odd width of 24 bit video.
Comment 8 Tim-Philipp Müller 2011-11-08 22:12:23 UTC
Comment on attachment 201011 [details] [review]
avidemux: fix wrong stride when inverting uncompressed video

Makes sense, and also seems to work for the sample from Bug #132341, I'd say let's put it in.
Comment 9 Vincent Penquerc'h 2011-11-09 11:47:59 UTC
I'm more and more certain that some bugzilla mail falls through the cracks.
I've not received your last comment here, and only saw it when I came back to push the fix :/

commit f4506d51815e05125f1625071de6a5e6a9f8908f
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Tue Nov 8 15:35:26 2011 +0000

    avidemux: fix wrong stride when inverting uncompressed video
    
    Such frames have a stride multiple of 4, see
    http://lscube.org/pipermail/ffmpeg-issues/2010-April/010247.html.
    
    This showed up on a sample using a odd width of 24 bit video.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=652288